--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -6,9 +6,7 @@
   <body>
     <div id="head">
       <span id="titletext">
-        <span id="AAI">AAI</span>
-        <span id="dev">dev</span>
-        <span id="dotgithub">.github.io</span>
+        <span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span>
       </span>
       <span id="links">
         <span id="members" onclick="to1()">Members</span>
