--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -4,14 +4,14 @@
     <title>AAIdev</title>
   </head>
   <body>
-    <div id="head">
+    <header id="head">
       <span id="titletext">
         <span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span>
       </span>
       <span id="links">
         <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Projects</span>
       </span>
-    </div>
+    </header>
     <div id="main">
       <p></p>
     </div>
