--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>AAIdev</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
     <header id="head">
