--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <header id="head">
-      <span id="titletext">
+      <div id="titletext">
         <span id="text"><span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span></span>
-      </span>
-      <div id="links">
-        <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Projects</span>
+          <div id="links">
+            <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Projects</span>
+          </div>
       </div>
     </header>
     <div id="main">
