--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -7,16 +7,14 @@
   <body>
     <header id="head">
       <div id="titletext">
-        <div id="text">
-        <span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span>
+        <span id="text"><span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span></span>
           <div id="links">
             <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Projects</span>
           </div>
-        </div>
       </div>
     </header>
     <div id="main">
-      <p>MAIN</p>
+      <p></p>
     </div>
   </body>
 </html>
