--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>AAIdev</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link href='https://fonts.googleapis.com/css?family=Lobster|Londrina+Outline|Kranky' rel='stylesheet' type='text/css' />
   </head>
   <body>
     <header id="head">
@@ -14,7 +15,9 @@
       </div>
     </header>
     <div id="main">
-      <p></p>
+      <p>
+        
+      </p>
     </div>
   </body>
 </html>
