--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -11,7 +11,7 @@
         <span id="text"><span id="AAI">AAI</span><span id="dev">dev</span><span id="dotgithub">.github.io</span></span>
       </div>
       <div id="links">
-        <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Projects</span>
+        <span id="members" onclick="to1()">Members</span><span id="projects" onclick="to2()">Projects</span><span id="contact" onclick="to3()">Contact us</span>
       </div>
     </header>
     <div id="main">
