--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -16,7 +16,7 @@
     </header>
     <div id="main">
       <p>
-        
+        Welcome to the homepage of the most innovative developers in the galaxy.
       </p>
     </div>
   </body>
