--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -18,6 +18,9 @@
       <p>
         Welcome to the homepage of the most innovative developers in the galaxy.
       </p>
+      <p>
+        Whether you came for the great free arduino projects, the libraries, the generators, or the pizza.... <span style="font-weight: bold;">WAIT A MINUTE- WE DONT HAVE PIZZA</span>
+      </p>
     </div>
   </body>
 </html>
