--- a/newwebsite/index.html
+++ b/newwebsite/index.html
@@ -4,6 +4,9 @@
     <title>AAIdev</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link href='https://fonts.googleapis.com/css?family=Lobster|Londrina+Outline|Kranky|Roboto' rel='stylesheet' type='text/css' />
+    <script src="script.js">
+      //any arguments?
+    </script>
   </head>
   <body>
     <header id="head">
